changes banner home

--- a/frontend/source/layouts/includes/index.pug
+++ b/frontend/source/layouts/includes/index.pug
@@ -9,6 +9,7 @@
                     source(srcset="images/banner_1@2x.png" media="(min-width: 1001px) and (max-width: 1440px)")
                     source(srcset="images/banner_1@2x.png" media="(min-width: 1441px)")
                     img(src="images/banner_1@1x.png").picture
+            .blanca__banner_title BLANCA PINTO
             .blanca__banner_text
                 //- | Ser libre es un acto de permanente autobservación. #[br] La libertad no se crea, el ser humano es su propia libertad
 
