--- a/frontend/source/sass/globals/global.scss
+++ b/frontend/source/sass/globals/global.scss
@@ -4,6 +4,7 @@ body {
     font-family: $font-text;
     font-weight: normal;
     color: $text-color;
+    background-color: $color-background;
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
