--- a/frontend/source/sass/modules/sections/index.scss
+++ b/frontend/source/sass/modules/sections/index.scss
@@ -86,7 +86,7 @@
         }
 
         @include bp(baby) {
-            padding: 50px 20px;
+            padding: 50px 15px;
         }
 
         &_title {
@@ -101,6 +101,7 @@
 
             @include bp(baby) {
                 font-size: 20px;
+                padding: 0 10px;
             }
         }
 
